
version 2.0.3

170503 Martin Mann :
 * README.md :
   + OS X install instructions (thanks to Lars Barquist)
 + IntaRNA/NussinovHandler : (thanks to Mostafa Mahmoud) implementation of
   intramolecular structure prediction, partition function and probability
   computation using a variant of the Nussinov-Jacobson model
 * IntaRNA/AccessibilityBasePair :
   * uses NussinovHandler for computation
 * IntaRNA/InteractionEnergyBasePair :
   * uses NussinovHandler for computation
   + computeES() : fill a given ES value container
   * getES*() : enabled
 + tests for NussinovHandler 
 + tests for InteractionEnergyBasePair
 + doc/latex-deps : provides required doxygen-latex dependencies

170413 Martin Mann :
 * doc/* 
   + added to distribution build

170412 Martin Mann :
 * configure.ac :
   * doxygen docu generation now truely optional
   * pkgconfig usage now truely optional (check for m4 functions)
 * Makefile.am :
   * doxygen docu generation now truely optional
   - include of doc/doxygen.am obsolete
   + @DX_RULES@ : doxygen rules generated by configure
 - doc/doxygen.am : obsolete

170411 Martin Mann :
 * PredictorHeuristicSeed :
   * predict() :
     * bugfix : reinit was not overwriting all hybridE_seed entries 
       (thanks to Alex Gawronski)

version 2.0.2

170328 Martin Mann :
 * PredictorHeuristic* :
   * predict() :
     * bugfix : reinit was not overwriting all matrix entries 
       (thanks to Alex Gawronski)

170307 Martin Mann :
 * header defines prefixed with INTARNA_
 * general.h :
   + checks if defines with general names are already present
   * intarna specific defines prefixed with INTARNA_
 * configure.ac :
   * VRNA configure flag conform with LocARNA (--with-vrna)
 * README.md
   + (minimal) library information added
 * CommandLineParsing :
   + argument boundaries for outDeltaE and outMaxE
 * SeedHandler :
   * traceBackSeed() : 
     * bugfix: was not using offset1/2

170306 Martin Mann :