@@ -740,8 +740,11 @@ targeted file/stream name:
 - `qPu:`|`tPu:` the [query/target's unpaired probabilities](#accessibility) (RNAplfold format), respectively
 
 Note, for *multiple sequences* in FASTA input, the provided file names
-are prefixed with with `s` and the according sequence's number (where indexing
+are suffixed with with `-s` and the according sequence's number (where indexing
 starts with 1) within the FASTA input to generate an individual file for each sequence.
+For `pMinE` output, if multiple query-target combinations are to be reported, the
+file name is suffixed with `-q#t#` (where `#` denotes the according sequence number
+within the input.
 
 
 <br />
